--- a/Common.Tests/Common.Tests.csproj
+++ b/Common.Tests/Common.Tests.csproj
@@ -23,6 +23,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\Common\Common.csproj"/>
+        <ProjectReference Include="..\TestUtilities\TestUtilities.csproj"/>
     </ItemGroup>
 
 </Project>
