--- a/TestUtilities/TestUtilities.csproj
+++ b/TestUtilities/TestUtilities.csproj
@@ -10,4 +10,10 @@
         <ProjectReference Include="..\Common\Common.csproj"/>
     </ItemGroup>
 
+    <ItemGroup>
+        <Reference Include="nunit.framework">
+            <HintPath>..\..\..\.nuget\packages\nunit\3.14.0\lib\netstandard2.0\nunit.framework.dll</HintPath>
+        </Reference>
+    </ItemGroup>
+
 </Project>
