Add basic user auth workflows

--- a/Logic.Tests/Logic.Tests.csproj
+++ b/Logic.Tests/Logic.Tests.csproj
@@ -24,6 +24,7 @@
     <ItemGroup>
         <ProjectReference Include="..\InMemory\InMemory.csproj"/>
         <ProjectReference Include="..\Logic\Logic.csproj"/>
+        <ProjectReference Include="..\TestUtilities\TestUtilities.csproj"/>
     </ItemGroup>
 
 </Project>
