--- a/Logic/Logic.csproj
+++ b/Logic/Logic.csproj
@@ -10,4 +10,8 @@
         <ProjectReference Include="..\Common\Common.csproj"/>
     </ItemGroup>
 
+    <ItemGroup>
+        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.14.0"/>
+    </ItemGroup>
+
 </Project>
